--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.gitmessage
 
 # dependencies
 /node_modules
@@ -36,3 +37,4 @@ next-env.d.ts
 
 # contentlayer
 .contentlayer
+
