--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.10.1",
         "typescript": "5.2.2"
+    },
+    "devDependencies": {
+        "@vanilla-extract/next-plugin": "^2.4.0"
     }
 }
