--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.10.1",
+        "rehype": "^13.0.1",
+        "rehype-pretty-code": "^0.10.1",
+        "remark-gfm": "^4.0.0",
+        "shiki": "^0.14.4",
         "typescript": "5.2.2"
     },
     "devDependencies": {
