--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-icons": "^4.10.1",
         "rehype": "^13.0.1",
         "rehype-pretty-code": "^0.10.1",
+        "rehype-slug": "^6.0.0",
         "remark-gfm": "^3.0.1",
         "shiki": "^0.14.4",
         "typescript": "5.2.2"
