--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "blog",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "private": true,
-    "description": "리팩토링 - CSS ▶️ vanilla-extract 마이그레이션 - remark, rehype mdx 플러그인 적용",
+    "description": "vanilla-extract 반응형 스타일 추가",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
