--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "blog",
-    "version": "2.0.1",
+    "version": "3.0.0",
     "private": true,
-    "description": "vanilla-extract 반응형 스타일 추가",
+    "description": "",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -13,18 +13,10 @@
         "@types/node": "20.5.7",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
-        "contentlayer": "^0.3.4",
         "date-fns": "^2.30.0",
         "next": "13.4.19",
-        "next-contentlayer": "^0.3.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-icons": "^4.10.1",
-        "rehype": "^13.0.1",
-        "rehype-pretty-code": "^0.10.1",
-        "rehype-slug": "^6.0.0",
-        "remark-gfm": "^3.0.1",
-        "shiki": "^0.14.4",
         "typescript": "5.2.2"
     },
     "devDependencies": {
