--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@notionhq/client": "^2.2.15",
         "@types/node": "20.5.7",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
@@ -17,9 +18,11 @@
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "typescript": "5.2.2"
+        "typescript": "5.2.2",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
-        "@vanilla-extract/next-plugin": "^2.4.0"
+        "@vanilla-extract/next-plugin": "^2.4.0",
+        "encoding": "^0.1.13"
     }
 }
