--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "date-fns": "^2.30.0",
+        "devicon": "^2.16.0",
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0",
