--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "clean": "rm -rf .next"
     },
     "dependencies": {
         "@notionhq/client": "^2.2.15",
@@ -16,6 +17,7 @@
         "@types/react-dom": "18.2.7",
         "date-fns": "^2.30.0",
         "devicon": "^2.16.0",
+        "highlight.js": "^11.9.0",
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0",
