--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "typescript": "5.2.2",
-        "zustand": "^4.5.2"
+        "typescript": "5.2.2"
     },
     "devDependencies": {
         "@vanilla-extract/next-plugin": "^2.4.0",
