--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/node": "20.5.7",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
+        "@vanilla-extract/css-utils": "^0.1.4",
         "date-fns": "^2.30.0",
         "devicon": "^2.16.0",
         "highlight.js": "^11.9.0",
